--- a/DesignerRHN/DesignerRHN-war/web/NovedadVacaciones.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NovedadVacaciones.xhtml
@@ -349,7 +349,7 @@
                         </p:panel>
                     </p:dialog>
 
-                    <!-- DIALOGO NUEVO REGISTRO -->
+                    <!-- DIALOGO DUPLICAR REGISTRO -->
                     <p:dialog id="DuplicarRegistroNovedad" header="Duplicar Registro" widgetVar="DuplicarRegistroNovedad" closable="false" resizable="false"  draggable="false" modal="true" height="400" width="450" style="font-size: 12px; padding: 0px">  
 
                         <center><strong><h:outputText value="Ingresar nueva novedad" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
