--- a/DesignerRHN/DesignerRHN-war/web/subcategoria.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/subcategoria.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="SUBCATEGORIAS" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="SubCategorias" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 835px; height: 375px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>SubCategoria</strong></legend>
 
@@ -52,11 +52,7 @@
                                         <h:outputText value="Descripción"/>
                                     </f:facet>
                                 </p:column>
-
-
-
                             </p:dataTable>
-
                         </fieldset>
 
                         <p:toolbar style="font-size: 12px; position: absolute; top: 40px; left: 20px;">  
