--- a/DesignerRHN/DesignerRHN-war/web/tipodescanso.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipodescanso.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="TIPO DESCANSOS" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Tipos Descansos" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 835px; height: 375px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>Descripción Descansos</strong></legend>
 
