--- a/DesignerRHN/DesignerRHN-war/web/categoriaesca.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/categoriaesca.xhtml
@@ -139,7 +139,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooTipoSueldo" value="#{msg['tipoSueldo']}"/>
+                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooTipoSueldo" value="#{msg['tipoSueldo']}" action="tipossueldo" actionListener="#{controlTipoSueldo.inicializarPagina('categoriaesca')}"/>
                                     </f:facet>
                                 </p:column> 
 
