--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
@@ -131,7 +131,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTipoSueldo" value="#{msg['tiposueldo']}"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTipoSueldo" value="#{msg['tiposueldo']}" action="tipossueldos" actionListener="#{controlTipoSueldo.inicializarPagina('emplVigSueldo')}" />
                                     </f:facet>
                                 </p:column>
 
