PROYECTO01 PC - WAR >> 14/02/2014

--- a/DesignerRHN/DesignerRHN-war/web/formulaproceso.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/formulaproceso.xhtml
@@ -43,7 +43,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="color: blue; height: 16px; border: none;width: 100%" value="Proceso" id="fooProcesoFormula"/>
+                                        <p:commandButton style="color: blue; height: 16px; border: none;width: 100%" value="Proceso" action="proceso" actionListener="#{controlProceso.inicializarPagina('formulaproceso')}" id="fooProcesoFormula"/>
                                     </f:facet>
                                 </p:column>
 
