--- a/DesignerRHN/DesignerRHN-war/web/tipoformula.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipoformula.xhtml
@@ -14,7 +14,7 @@
                 <h:form id="form">
                     <f:loadBundle basename="Recursos.tipoformula" var="msg" />
 
-                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style=" font-size: 13px; position: absolute; width: 874px; height: 520px;" >
+                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style=" font-size: 13px; position: absolute; width: 874px; height: 500px;" >
                         <p:commandButton style="position: absolute; left: 25px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="#{msg['refrescar']}" actionListener="#{controlTipoFormula.cancelarModificacion()}" process="@this" />
                         <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 100px; height: 330px; border-radius: 10px; ">
                             <legend style="font-size: 13px; color: #14388B"><strong>#{msg['formula']}</strong></legend>
@@ -72,6 +72,7 @@
                                 </p:column>
 
                                 <p:column style="padding: 0px" headerText="..." width="32" id="operandosDetalles" filterStyle="display: none; visibility: hidden;"  >  
+                                    <p:commandButton value=" " style="width: 99%; height: 99%" />
                                     <f:facet name="header">
                                         <h:outputText id="headerFormula" value="..." />
                                         <p:tooltip style="font-size: 12px" for="headerFormula" value="#{msg['formula']}" />
