--- a/DesignerRHN/DesignerRHN-war/web/tipofuncion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipofuncion.xhtml
@@ -14,7 +14,7 @@
                 <h:form id="form">
                     <f:loadBundle basename="Recursos.tipofuncion" var="msg" />
 
-                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style=" font-size: 13px; position: absolute; width: 874px; height: 520px;" >
+                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style=" font-size: 13px; position: absolute; width: 874px; height: 500px;" >
                         <p:commandButton style="position: absolute; left: 25px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="Refrescar" actionListener="#{controlTipoFuncion.cancelarModificacion()}" process="@this" />
                         <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 100px; height: 330px; border-radius: 10px; ">
                             <legend style="font-size: 13px; color: #14388B"><strong>#{msg['funcion']}</strong></legend>
@@ -165,7 +165,7 @@
 
                     <p:dialog id="editarObjetos" header="#{msg['editarObjetos']}" widgetVar="editarObjetos" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px">  
                         <p:inputTextarea value="#{controlTipoFuncion.editarTiposFunciones.nombreobjeto}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
-                        <p:commandButton id="cancelarDescripciones" value="#{msg['atras']}" onclick="editarObjetos.hide();" style="position: absolute; top: 60px; left: 148px; font-size: 11px" process="@this"/>
+                        <p:commandButton id="cancelarObjetos" value="#{msg['atras']}" onclick="editarObjetos.hide();" style="position: absolute; top: 60px; left: 148px; font-size: 11px" process="@this"/>
                     </p:dialog>
 
                     <p:dialog id="confirmarGuardar" header="#{msg['atencion']}" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
